--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,7 @@ h3 {
 
 h1 {
   font-size: 2.4rem;
+  margin: 1rem 0 1rem;
 }
 
 h3 {
@@ -115,12 +116,20 @@ nav {
 
 /* Main */
 
+section {
+  margin: 0;
+}
+
+section:nth-child(even) {
+  background: #f9f9f9;
+  box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset,
+    0px 10px 15px -20px rgba(0, 0, 0, 0.3) inset;
+}
 main {
   margin: 0 auto;
   padding: 0;
   min-height: 60vh;
 }
-
 .two-column {
   max-width: 1000px;
   margin: 0 auto;
@@ -128,24 +137,20 @@ main {
   grid-column-gap: 2rem;
   grid-template-columns: minmax(300px, 5fr) minmax(300px, 2fr);
 }
-
 .home {
   padding: 0 1rem;
 }
-
 article {
   max-width: 48rem;
-  margin: 0 auto 2rem;
-  padding: 0 1rem;
+  margin: 0 auto;
+  padding: 1rem;
 }
-
 figure {
   margin: 0;
   padding: 0;
 }
 
 /* feature */
-
 .feature {
   width: 100%;
   background-color: #010101;
@@ -158,11 +163,9 @@ figure {
   /* margin: 0 2rem; */
   /* border-radius: 16px; */
 }
-
 .feature__title {
   margin: 0 0 1rem;
 }
-
 .feature img {
   margin: 1rem 0;
   overflow: hidden;
@@ -171,22 +174,17 @@ figure {
 .feature a {
   color: #5dcaff;
 }
-
 .feature:hover {
   background-color: #012;
 }
-
 .feature a:hover {
   color: #5dcaff;
 }
-
-/* a */
 
 a {
   text-decoration: none;
   color: #006b9c;
 }
-
 a:hover {
   color: #0099cd;
   text-decoration: none;
@@ -195,26 +193,20 @@ a:hover {
 article a {
   font-weight: 600;
 }
-
 header a:hover,
 nav a:hover {
   text-decoration: none;
 }
 
 /* content */
-
 p {
   margin: 0 0 1rem;
 }
-
 /* footer */
-
 footer {
   padding: 1rem 1rem 2rem;
-
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1rem;
-
   border-top: 1px solid #111;
   border-left: 0;
   border-right: 0;
@@ -222,10 +214,8 @@ footer {
 
   color: #0099cd;
   background: #010101;
-
   box-shadow: 0 -10px 10px -10px rgba(0, 0, 0, 0.3);
 }
-
 .footer-items {
   text-align: center;
   display: flex;
@@ -233,50 +223,41 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
 .footer-items > li {
   margin: 1rem 2rem;
 }
-
 footer a {
   color: #0099cd;
 }
-
 footer a:hover {
   color: #5dcaff;
 }
-
 address {
   font-style: normal;
 }
-
 /* context styles */
-
 .support {
   /* font-style: italic; */
   color: #777;
   grid-column: 1 / 3;
+
   margin: 1rem 0 2rem;
 }
 @media only screen and (max-width: 900px) {
   .two-column {
     grid-template-columns: 1fr;
   }
-
   .support {
     grid-column: 1 / 2;
   }
 }
-
 .copyright {
   color: #aaa;
 }
-
 .donate {
   background: #0099cd;
   width: 300px;
@@ -286,7 +267,6 @@ address {
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
 }
-
 .donate h3 {
   font-family: "Source Sans Pro", "Arial Narrow", Arial, sans-serif;
   font-weight: normal;
@@ -295,18 +275,15 @@ address {
 .donate a {
   color: white;
 }
-
 .donate:hover {
   background: #006b9c;
 }
-
 .donate h3 {
   font-size: 2rem;
   padding: 1rem;
 }
 
 /* nav */
-
 nav {
   box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
   background: #f9f9f9;
@@ -315,7 +292,6 @@ nav {
   text-align: center;
   font-size: 1rem;
 }
-
 .nav-links {
   list-style: none;
   margin: 0 auto;
@@ -326,7 +302,6 @@ nav {
   align-items: center;
   max-width: 900px;
 }
-
 .nav-links li {
   margin: 0;
   padding: 0;
@@ -340,7 +315,6 @@ nav {
 /* .nav-links li:hover { */
 /* background: #012; */
 /* alternate: no change */
-/* } */
 
 dl,
 dt,
@@ -348,7 +322,6 @@ dd {
   margin: 0;
   padding: 0;
 }
-
 .bio-list {
   display: grid;
   grid-template-columns: 100px auto;
@@ -357,20 +330,18 @@ dd {
   margin: 2rem 0;
   padding: 0;
 }
-
 .bio-list img {
   width: 100px;
   height: 100px;
+
   object-fit: scale-down;
   border-radius: 50%;
   margin: 1rem;
 }
-
 @media only screen and (max-width: 600px) {
   .bio-list {
     display: block;
   }
-
   .bio-list dt {
     float: left;
     shape-outside: circle();
@@ -385,38 +356,32 @@ dd {
     margin-bottom: 2rem;
   }
 }
-
 /* latest */
-
 .latest__title {
   max-width: 48rem;
   margin: 0 auto;
   padding: 0 1rem;
 }
-
 .latest {
   display: flex;
 }
-
 /* map layout */
-
 .map {
+  margin: 0;
+  padding: 0;
+
   background: url(/static/images/US-map.jpg) no-repeat;
   background-size: cover;
   background-position: center center;
-
   height: 100vh;
-
   display: flex;
   align-items: stretch;
   justify-content: stretch;
   flex-direction: column;
 }
-
 .map__nav {
   margin: 0;
 }
-
 .map__title {
   font-weight: 300;
   text-transform: uppercase;
@@ -425,11 +390,9 @@ dd {
   text-align: center;
   font-family: "Source Sans Pro", "Arial Narrow", Arial, sans-serif;
   text-shadow: 1px 1px #aab3b6;
-
   margin: 0;
   font-size: 2.2rem;
 }
-
 .map__logo {
   width: 60vw;
   height: 12.9vw;
@@ -439,7 +402,6 @@ dd {
   min-height: 64.4px;
   filter: drop-shadow(0px 4px 2px #aab3b6);
 }
-
 .map__inset {
   text-align: center;
   background: rgba(255, 255, 255, 0.8);
@@ -450,7 +412,6 @@ dd {
   flex-grow: 1;
   box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
 }
-
 @media only screen and (max-width: 600px) {
   .map__title {
     font-size: 1.4rem;
