Give map fixed background attachment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -367,6 +367,8 @@ dd {
   background: url(/static/images/US-map.jpg) no-repeat;
   background-size: cover;
   background-position: center center;
+  background-attachment: fixed;
+
   height: 100vh;
   display: flex;
   align-items: stretch;
