--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,10 +21,10 @@ h1,
 h2,
 h3 {
   font-family: "Playfair Display", Georgia, serif;
-  font-weight: 900;
-  margin: 2rem 0 1rem;
   padding: 0;
+  font-weight: 700;
   line-height: 1.2;
+  margin: 1.5rem 0 1rem;
 }
 
 h1 {
@@ -35,6 +35,7 @@ h1 {
 h3 {
   line-height: 1.6;
   font-size: 1.6rem;
+  margin: 1.5rem 0 0.75rem;
 }
 
 /* header */
@@ -399,6 +400,7 @@ dd {
   filter: drop-shadow(0px 4px 2px #aab3b6);
 }
 .map__inset {
+  padding: 1rem;
   text-align: center;
   background: rgba(255, 255, 255, 0.8);
   display: flex;
@@ -411,10 +413,6 @@ dd {
 @media only screen and (max-width: 600px) {
   .map__title {
     font-size: 1.4rem;
-  }
-  .map__nav .nav-links {
-    display: flex;
-    flex-direction: column;
   }
   .map__inset {
     height: 100vh;
