Add google site verification meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="google-site-verification" content="jaL3ii25-g2LejBrllWbH-DmyT7b-vJw8URj-tvq8kE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
   <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
