--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="google-site-verification" content="jaL3ii25-g2LejBrllWbH-DmyT7b-vJw8URj-tvq8kE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
   <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
-  <link rel="canonical" href="{{ page.url | absolute_url }}">
   <title>{% if page.title %}{{page.title}} - {% endif %}Metric Geometry and Gerrymandering Group</title>
   <link rel="stylesheet" type="text/css" media="screen" href="static/css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Quattrocento:400,700|Source+Sans+Pro:300,400"
     rel="stylesheet">
+  {% seo title=false %}
 </head>
