--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,7 @@
         {{ page.title }}
         - {% endif %}Metric Geometry and Gerrymandering Group
     </title>
-    <link
-        rel="stylesheet"
-        type="text/css"
-        media="screen"
-        href="static/css/style.css"
-    />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ "/static/style.css" | relative_url }}" />
     <link
         href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Quattrocento:400,700|Source+Sans+Pro:300,400"
         rel="stylesheet"
