--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -10,7 +10,7 @@ footer {
 
     color: #0099cd;
     background: #010101;
-    box-shadow: 0 -10px 10px -10px rgba(0, 0, 0, 0.3);
+    box-shadow: $cast_above;
 }
 
 .footer-items {
