--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,10 +2,22 @@
     box-sizing: border-box;
 }
 
+html {
+    background: #010101;
+}
+
 body {
+    background: white;
     margin: 0;
     padding: 0;
-    color: #111111;
-    line-height: 2;
     overflow-x: hidden;
 }
+
+$raised: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
+    0 2px 4px rgba(0, 0, 0, 0.24);
+
+$inset_bottom: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
+
+$inset_top: 0px 10px 15px -20px rgba(0, 0, 0, 0.3) inset;
+
+$cast_above: 0 -10px 10px -10px rgba(0, 0, 0, 0.3);
