--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -17,7 +17,7 @@ header {
 
 header,
 nav {
-    font-family: "Source Sans Pro", "Arial Narrow", Arial, sans-serif;
+    font-family: $font_sans_thin;
     text-transform: uppercase;
 }
 
@@ -27,7 +27,7 @@ nav {
     line-height: 2;
     letter-spacing: 0.5rem;
     text-align: center;
-    font-family: "Source Sans Pro", "Arial Narrow", Arial, sans-serif;
+    font-family: $font_sans_thin;
     margin: 0.4rem 0;
     font-size: 1.2rem;
 }
@@ -66,7 +66,7 @@ nav {
 
 /* nav */
 nav {
-    box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
+    box-shadow: $inset_bottom;
     background: #f9f9f9;
     margin: 0 auto;
     overflow-x: auto;
