--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,14 +6,14 @@ section {
 
 section:nth-child(even) {
     background: #f9f9f9;
-    box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset,
-        0px 10px 15px -20px rgba(0, 0, 0, 0.3) inset;
+    box-shadow: $inset_bottom, $inset_top;
 }
 
 main {
     margin: 0 auto;
     padding: 0;
     min-height: 60vh;
+    background: white;
 }
 
 .two-column {
