--- a/_sass/_map.scss
+++ b/_sass/_map.scss
@@ -31,7 +31,7 @@
     line-height: 2;
     letter-spacing: 0.5rem;
     text-align: center;
-    font-family: "Source Sans Pro", "Arial Narrow", Arial, sans-serif;
+    font-family: $font_sans_thin;
     text-shadow: 1px 1px #aab3b6;
     margin: 0;
     font-size: 2.2rem;
@@ -54,7 +54,7 @@
     align-items: center;
     flex-direction: column;
     flex-grow: 1;
-    box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
+    box-shadow: $inset_bottom;
 }
 @media only screen and (max-width: 600px) {
     .map__title {
