--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,7 +1,7 @@
 /* footer */
 footer {
     padding: 1rem 1rem 2rem;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: $font_sans;
     font-size: 1rem;
     border-top: 1px solid #111;
     border-left: 0;
