--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,5 +1,6 @@
-$font_serif: "Quattrocento", Georgia, serif;
+$font_serif: "Lora", Georgia, serif;
 $font_header_serif: "Playfair Display", Georgia, serif;
+// $font_header_serif: $font_serif;
 $font_sans: "Source Sans Pro", sans-serif;
 $font_sans_thin: "Source Sans Pro", "Arial Narrow", Arial, sans-serif;
 
@@ -19,7 +20,7 @@ h3 {
     padding: 0;
     font-weight: 700;
     line-height: 1.2;
-    margin: 1.5rem 0 1rem;
+    margin: 1.5rem 0 0.75rem;
 }
 
 h1 {
@@ -27,10 +28,13 @@ h1 {
     margin: 1rem 0 1rem;
 }
 
+h2 {
+    font-size: 1.5rem;
+}
+
 h3 {
     line-height: 1.6;
-    font-size: 1.6rem;
-    margin: 1.5rem 0 0.75rem;
+    font-size: 1.2rem;
 }
 
 h4 {
