--- a/static/style.scss
+++ b/static/style.scss
@@ -11,17 +11,121 @@
 @import "map";
 @import "footer";
 
-.gallery {
-    margin: 1rem;
+$max_card_width: 36rem;
+
+.gallery__header {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.gallery__title {
+    text-align: center;
+    margin: 0.5rem auto;
+    // font-family: $font_sans;
+    // font-size: 1.2rem;
+    // text-transform: uppercase;
+    // font-weight: 400;
+    // letter-spacing: 0.1rem;
+}
+
+.gallery__title:first-child {
+    margin: 0.5rem auto;
+}
+
+.gallery__title {
+    margin: 3rem auto 0.5rem;
+}
+
+.gallery-container {
+    max-width: 48rem;
+    margin: 0 auto 2rem;
+}
+
+.gallery-grid {
     padding: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.gallery {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    // grid-template-columns: 3fr 2fr;
+    // grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
     list-style: none;
-    grid-gap: 1rem;
+}
+
+.primary-gallery {
+    min-width: 300px;
+    max-width: 40rem;
+}
+
+.secondary-gallery {
+    min-width: 300px;
+    max-width: 20rem;
 }
 
 .card {
-    margin: 0;
-    padding: 1rem;
+    margin: 1vw 0;
+    display: flex;
+    flex-direction: column;
     background: #f9f9f9;
+}
+
+.card-content {
+    padding: 0.8rem;
+}
+
+.card-title {
+    margin: 0;
+    line-height: 1.4;
+}
+
+.card-image {
+    object-fit: cover;
+    width: 100%;
+    display: block;
+    background: #010101;
+}
+
+.card-image-link {
+    width: 100%;
+    max-height: 200px;
+    overflow: hidden;
+}
+
+.card-authors {
+    font-family: $font_sans;
+    text-transform: uppercase;
+    font-weight: 300;
+}
+
+.card-teaser {
+    line-height: 1.6;
+    margin: 0.5rem 0;
+}
+
+.card-publication {
+    font-size: 0.8rem;
+    color: #666;
+    font-style: italic;
+}
+
+.featured {
+    background: white;
+    box-shadow: $raised;
+}
+
+.featured .card-title {
+    font-size: 1.8rem;
+}
+
+@media only screen and (max-width: 400px) {
+    .featured {
+        margin: 0 0.5rem 1rem;
+    }
 }
