--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,8 +13,7 @@ body {
     overflow-x: hidden;
 }
 
-$raised: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
-    0 2px 4px rgba(0, 0, 0, 0.24);
+$raised: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
 // $raised: 0 4px 8px rgba(12, 12, 12, 0.1);
 
 $inset_bottom: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
