Make author text lighter

--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -127,6 +127,7 @@ For when grid is not supported:
     font-family: $font_sans_thin;
     text-transform: uppercase;
     font-weight: 300;
+    color: #666;
 }
 
 .card-teaser {
