--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -27,6 +27,10 @@ $max_card_width: 36rem;
     margin: 0 auto 2rem;
 }
 
+.single-column {
+    max-width: 40rem;
+}
+
 /*
 For when grid is not supported:
 */
