--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -1,34 +1,11 @@
-$max_card_width: 36rem;
-
-.gallery__header {
-    margin: 2rem auto 0;
-    text-align: center;
-}
-
-.gallery__title {
-    text-align: center;
-    margin: 0.5rem auto;
-    // font-family: $font_sans_thin;
-    // font-size: 1.2rem;
-    // text-transform: uppercase;
-    // font-weight: 400;
-    // letter-spacing: 0.1rem;
-}
-
-.gallery__title:first-child {
-    margin: 0.5rem auto 0.5rem;
-}
-
-.gallery__title {
-    margin: 2rem auto 0.5rem;
-}
+$max_card_width: rem;
 
 .gallery-container {
-    margin: 0 auto 2rem;
+  margin: 0 auto 2rem;
 }
 
 .single-column {
-    max-width: 40rem;
+  max-width: 50rem;
 }
 
 /*
@@ -36,13 +13,13 @@ For when grid is not supported:
 */
 
 .gallery-grid {
-    padding: 0;
-    max-width: 80rem;
-    margin: 0 auto;
+  padding: 0;
+  max-width: 80rem;
+  margin: 0 auto;
 }
 
 .gallery-part {
-    margin: 2rem auto 0;
+  margin: 2rem auto 0;
 }
 
 // Something like this accomplishes the two-column layout in IE11, but then
@@ -59,104 +36,104 @@ For when grid is not supported:
 
 // For when grid is supported
 @supports (display: grid) {
-    .gallery-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    }
+  .gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 
+  .gallery-part {
+    margin: 0 2vw;
+  }
+
+  .gallery-part:first-child {
+    margin: 0 2vw;
+  }
+
+  @media only screen and (max-width: $max_card_width) {
     .gallery-part {
-        margin: 0 2vw;
+      margin: 2rem 2vw 0;
     }
-
-    .gallery-part:first-child {
-        margin: 0 2vw;
-    }
-
-    @media only screen and (max-width: $max_card_width) {
-        .gallery-part {
-            margin: 2rem 2vw 0;
-        }
-    }
+  }
 }
 
 .gallery-part {
-    max-width: $max_card_width;
+  max-width: $max_card_width;
 }
 
 .gallery {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    // grid-template-columns: 3fr 2fr;
-    // grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
-    list-style: none;
+  padding: 0;
+  margin: 0 -1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  // grid-template-columns: 3fr 2fr;
+  // grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  list-style: none;
 }
 
 .card {
-    margin: 1vw 0;
-    display: flex;
-    flex-direction: column;
-    background: #f9f9f9;
+  margin: 1vw 0;
+  display: flex;
+  flex-direction: column;
+  background: #f9f9f9;
 }
 
 .card-content {
-    padding: 0.8rem;
+  padding: 0.8rem;
 }
 
 .card-content ul {
-    list-style: disc;
+  list-style: disc;
 }
 
 .card-title {
-    margin: 0;
-    line-height: 1.4;
+  margin: 0;
+  line-height: 1.4;
 }
 
 .card-image {
-    object-fit: cover;
-    width: 100%;
-    display: block;
-    background: #010101;
+  object-fit: cover;
+  width: 100%;
+  display: block;
+  background: #010101;
 }
 
 .card-image-link {
-    width: 100%;
-    max-height: 200px;
-    overflow: hidden;
+  width: 100%;
+  max-height: 200px;
+  overflow: hidden;
 }
 
 .card-authors {
-    font-family: $font_sans_thin;
-    text-transform: uppercase;
-    font-weight: 300;
-    color: #666;
+  font-family: $font_sans_thin;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: #666;
 }
 
 .card-teaser {
-    line-height: 1.6;
-    margin: 0.5rem 0;
+  line-height: 1.6;
+  margin: 0.5rem 0;
 }
 
 .card-publication {
-    font-size: 0.8rem;
-    color: #666;
-    font-style: italic;
+  font-size: 0.8rem;
+  color: #666;
+  font-style: italic;
 }
 
 .featured {
-    background: white;
-    box-shadow: $raised;
-    // border-radius: 0.5rem;
+  background: white;
+  box-shadow: $raised;
+  // border-radius: 0.5rem;
 }
 
 .featured .card-title {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
 }
 
 @media only screen and (max-width: 400px) {
-    .featured {
-        margin: 0 0.5rem 1rem;
-    }
+  .featured {
+    margin: 0 0.5rem 1rem;
+  }
 }
