--- a/_sass/_map.scss
+++ b/_sass/_map.scss
@@ -43,7 +43,7 @@
   min-width: 300px;
   max-height: 214.6px;
   min-height: 64.4px;
-  filter: drop-shadow(0px 4px 2px #aab3b6);
+  filter: drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.4));
 }
 .map__inset {
   padding: 1rem;
