Fix nav padding in mobile, rename bvap

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -102,6 +102,7 @@ nav {
 @media only screen and (max-width: 600px) {
   nav {
     flex-direction: column;
+    padding: 0rem;
   }
   .nav-logo {
     margin: 0.2rem 0;
