Add News and VRDI 2019 announcement

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@
       </header>
       <div class="map__nav-shadow"></div>
     </section>
-    {{ content }}
+    <main>{{ content }}</main>
 
     {% include footer.html %}
   </body>
