--- a/_includes/top_navigation.html
+++ b/_includes/top_navigation.html
@@ -4,7 +4,7 @@
       <a href="/">
         <img
           class="nav-logo"
-          src="./static/logo.svg"
+          src="/static/logo.svg"
           alt="Metric Geometry and Gerrymandering Group"
         />
       </a>
