Add amicus to front page

--- a/static/style.scss
+++ b/static/style.scss
@@ -1,7 +1,6 @@
 ---
 ---
 
-
 @import "base";
 @import "typography";
 @import "header";
@@ -12,3 +11,4 @@
 @import "footer";
 @import "gallery";
 @import "post";
+@import "figure";
