Add second figure and make CMS-able

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,21 @@
 <head>
-  {% include google-tag.html %}
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico" />
-  <title>
-    {% if page.title %} {{ page.title }} | {% endif %}Metric Geometry and
-    Gerrymandering Group
-  </title>
-  <link rel="stylesheet" type="text/css" media="screen" href="
-  {{
-    "/static/style.css" | relative_url
-  }}
-  " />
-  <link
-    href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Lora:400,400i,700|Source+Sans+Pro:300,400"
-    rel="stylesheet"
-  />
-  {% seo title=false %}
+    {% include google-tag.html %}
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <title>
+        {% if page.title %} {{ page.title }} | {% endif %}Metric Geometry and
+        Gerrymandering Group
+    </title>
+    <link rel="stylesheet" type="text/css" media="screen" href="
+    {{
+        "/assets/style.css" | relative_url
+    }}
+    " />
+    <link
+        href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Lora:400,400i,700|Source+Sans+Pro:300,400"
+        rel="stylesheet"
+    />
+    {% seo title=false %}
 </head>
