--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -20,7 +20,7 @@
 }
 
 .donate {
-    background: #0099cd;
+    background: $mggg_blue;
     width: 300px;
     text-align: center;
     border-radius: 8px;
