--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,5 +1,7 @@
 {% for page in site.data.navigation %}
 <li>
-  <a href="{{ page.href | relative_url }}"> {{ page.name }} </a>
+    <a href="{{ page.href | relative_url }}" class="nav-link">
+        {{ page.name }}
+    </a>
 </li>
 {% endfor %}
