--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include head.html %}
+    {% include head.html %}
 
-  <body>
-    {% include top_navigation.html %}
+    <body>
+        {% include top_navigation.html %}
 
-    <main>
-      <article>
-        <h1>{{ page.title }}</h1>
-        <div class="post-metadata">
-          <div class="post-authors">{{ page.authors }}</div>
-          <div class="post-date">{{ page.date | date_to_long_string }}</div>
-        </div>
-        <div class="post-content">{{ content }}</div>
-      </article>
-    </main>
+        <main>
+            <article>
+                <h1>{{ page.title }}</h1>
+                <div class="post-metadata">
+                    <div class="post-authors">{{ page.authors }}</div>
+                    {% if page.date %}
+                    <div class="post-date">
+                        {{ page.date | date_to_long_string }}
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="post-content">{{ content }}</div>
+            </article>
+        </main>
 
-    {% include footer.html %}
-  </body>
+        {% include footer.html %}
+    </body>
 </html>
