--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,38 +1,33 @@
 /* Main */
 
 section {
-  margin: 0;
-}
-
-section:nth-child(even) {
-  background: #f9f9f9;
-  box-shadow: $inset_bottom, $inset_top;
+    margin: 0;
 }
 
 main {
-  margin: 0 auto;
-  padding: 0;
+    margin: 0 auto;
+    padding: 0;
+    max-width: 48rem;
 }
 
 .two-column {
-  max-width: 1000px;
-  margin: 0 auto;
-  display: grid;
-  grid-column-gap: 2rem;
-  grid-template-columns: minmax(300px, 5fr) minmax(300px, 2fr);
+    max-width: 1000px;
+    margin: 0 auto;
+    display: grid;
+    grid-column-gap: 2rem;
+    grid-template-columns: minmax(300px, 5fr) minmax(300px, 2fr);
 }
 
 .home {
-  padding: 0 1rem;
+    padding: 0 1rem;
 }
 
 article {
-  max-width: 50rem;
-  margin: 0 auto;
-  padding: 1rem;
+    margin: 0 auto;
+    padding: 1rem 0;
 }
 
 figure {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
