--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,7 +1,8 @@
 .post-metadata {
     display: flex;
     justify-content: flex-start;
-    margin: 0 0 0.8rem;
+    line-height: 2;
+    margin: 0.5rem 0;
 }
 
 .post-authors,
@@ -21,7 +22,8 @@
 }
 
 .post-title {
-    font-size: 2.2rem;
+    font-size: 2.25rem;
+    line-height: 1.5;
 }
 
 // .post-title a {
