--- a/_includes/excerpt.html
+++ b/_includes/excerpt.html
@@ -1,10 +1,10 @@
-<article>
-    <h2 class="post-title">
-        <a href="{{ post.url }}">{{ post.title }}</a>
-    </h2>
-    <div class="post-metadata">
-        <div class="post-authors">{{ post.authors }}</div>
-        <div class="post-date">{{ post.date | date_to_long_string }}</div>
-    </div>
-    <div class="post-content">{{ post.excerpt }}</div>
+<article class="excerpt">
+  <h2 class="post-title">
+    <a href="{{ post.url }}">{{ post.title }}</a>
+  </h2>
+  <div class="post-metadata">
+    <div class="post-authors">{{ post.authors }}</div>
+    <div class="post-date">{{ post.date | date_to_long_string }}</div>
+  </div>
+  <div class="post-content">{{ post.excerpt }}</div>
 </article>
