--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,35 +1,38 @@
 .post-metadata {
-    display: flex;
-    justify-content: flex-start;
-    line-height: 2;
-    margin: 0.5rem 0;
+  display: flex;
+  justify-content: flex-start;
+  line-height: 2;
+  margin: 0.5rem 0;
 }
 
 .post-authors,
 .post-date {
-    font-family: $font_sans_thin;
-    font-weight: 400;
-    color: #666;
+  font-family: $font_sans_thin;
+  font-weight: 400;
+  color: #666;
 }
 
 .post-authors {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .post-authors::after {
-    content: "|";
-    margin: 0 1rem;
+  content: "|";
+  margin: 0 1rem;
 }
 
 .post-title {
-    font-size: 2.25rem;
-    line-height: 1.5;
+  font-size: 2.25rem;
+  line-height: 1.5;
 }
 
-// .post-title a {
-//   color: inherit;
-// }
+@media only screen and (max-width: 700px) {
+  .post-title {
+    font-size: 1.5rem;
+    line-height: 1.25;
+  }
+}
 
-// .post-title a:hover {
-//   color: #666;
-// }
+.excerpt {
+  margin-top: 1rem;
+}
