--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,4 +1,4 @@
-$mggg_blue: #0099cd;
-$mggg_dark_blue: #006b9c;
-$mggg_very_dark_blue: #004464;
-$mggg_light_blue: #5dcaff;
+$mggg-blue: #0099cd;
+$mggg-dark-blue: #006b9c;
+$mggg-very-dark-blue: #004464;
+$mggg-light-blue: #5dcaff;
