--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -7,7 +7,7 @@
 
 .post-authors,
 .post-date {
-  font-family: $font_sans_thin;
+  font-family: $font-sans-thin;
   font-weight: 400;
   color: #666;
 }
