--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -1,47 +1,44 @@
 /* context styles */
 .support {
-    /* font-style: italic; */
-    color: #777;
-    grid-column: 1 / 3;
+  /* font-style: italic; */
+  color: #777;
+  grid-column: 1 / 3;
 
-    margin: 1rem 0 2rem;
+  margin: 1rem 0 2rem;
 }
+
 @media only screen and (max-width: 900px) {
-    .two-column {
-        grid-template-columns: 1fr;
-    }
-    .support {
-        grid-column: 1 / 2;
-    }
-}
-
-.copyright {
-    color: #aaa;
+  .two-column {
+    grid-template-columns: 1fr;
+  }
+  .support {
+    grid-column: 1 / 2;
+  }
 }
 
 .donate {
-    background: $mggg_blue;
-    width: 300px;
-    text-align: center;
-    border-radius: 8px;
-    margin: 2rem auto;
-    box-shadow: $raised;
+  background: $mggg-blue;
+  width: 300px;
+  text-align: center;
+  border-radius: 8px;
+  margin: 2rem auto;
+  box-shadow: $raised;
 }
 
 .donate h3 {
-    font-family: $font_sans_thin;
-    font-weight: normal;
+  font-family: $font-sans-thin;
+  font-weight: normal;
 }
 
 .donate a {
-    color: white;
+  color: white;
 }
 
 .donate:hover {
-    background: #006b9c;
+  background: #006b9c;
 }
 
 .donate h3 {
-    font-size: 2rem;
-    padding: 1rem;
+  font-size: 2rem;
+  padding: 1rem;
 }
