--- a/_sass/_feature.scss
+++ b/_sass/_feature.scss
@@ -1,35 +1,35 @@
 /* feature */
 
 .feature {
-    width: 100%;
-    background-color: #010101;
-    color: #5dcaff;
-    padding: 2rem;
-    overflow: hidden;
-    margin: 2rem auto;
-    /* margin: 0; */
-    /* Alternate: */
-    /* margin: 0 2rem; */
-    /* border-radius: 16px; */
+  width: 100%;
+  background-color: black;
+  color: #5dcaff;
+  padding: 2rem;
+  overflow: hidden;
+  margin: 2rem auto;
+  /* margin: 0; */
+  /* Alternate: */
+  /* margin: 0 2rem; */
+  /* border-radius: 16px; */
 }
 
 .feature__title {
-    margin: 0 0 1rem;
+  margin: 0 0 1rem;
 }
 
 .feature img {
-    margin: 1rem 0;
-    overflow: hidden;
+  margin: 1rem 0;
+  overflow: hidden;
 }
 
 .feature a {
-    color: #5dcaff;
+  color: #5dcaff;
 }
 
 .feature:hover {
-    background-color: #012;
+  background-color: #012;
 }
 
 .feature a:hover {
-    color: #5dcaff;
+  color: #5dcaff;
 }
